# backend/src/routes/youtube.routes.js
@@ -1,8 +1,11 @@
 const express = require('express');
 const { getShorts } = require('../controllers/youtube.controller');
+const { authenticate } = require('../middleware/auth.middleware');
+const { authorizeRoles } = require('../middleware/role.middleware');
+const { USER_ROLES } = require('../constants/enums');
 
 const router = express.Router();
 
-router.get('/shorts', getShorts);
+router.get('/shorts', authenticate, authorizeRoles(USER_ROLES.STUDENT), getShorts);
 
 module.exports = router;
